# samhyun_demo

ACS/ACS_Volvo/: .gitignore  README.md  map1_node1_node.yaml  test_map_map1.yaml
ACS/ACS_Volvo/backend/: app.js  nodemon.json  package-lock.json  package.json  server.js
ACS/ACS_Volvo/backend/db/: amr.db-journal
ACS/ACS_Volvo/backend/src/config/: database.js
ACS/ACS_Volvo/backend/src/controllers/: logsController.js  mapController.js  monitoringController.js  pcdController.js  robotController.js
ACS/ACS_Volvo/backend/src/database/: connection.js  init.js  seedData.js
ACS/ACS_Volvo/backend/src/middleware/: requestMonitor.js
ACS/ACS_Volvo/backend/src/models/: ActivityLog.js  Mission.js  Robot.js
ACS/ACS_Volvo/backend/src/routes/: index.js  logs.js  maps.js  missions.js  monitoring.js  pcd.js  robots.js  video.js
ACS/ACS_Volvo/backend/src/services/: activityLogService.js  networkMetricsService.js  pcdProcessingService.js  robotStatusService.js  rtspStreamService.js  taskManagementService.js  webrtcSignalingService.js
ACS/ACS_Volvo/backend/src/utils/: logger.js
ACS/ACS_Volvo/frontend/: index.html  package-lock.json  package.json
ACS/ACS_Volvo/frontend/src/: App.css  App.jsx  index.css  main.jsx
ACS/ACS_Volvo/frontend/src/constants/: index.js
ACS/ACS_Volvo/frontend/src/contexts/: AppContext.jsx
ACS/ACS_Volvo/frontend/src/hooks/: useMissions.js  useRobots.js  useSimulatedData.js
ACS/ACS_Volvo/rtsp_test_server/: README.md  rtsp_server.py
ACS/ACS_Volvo/test/: README.md  amr-node.js  package-lock.json  package.json
ACS/ACS_Volvo/webrtc_broadcaster/: README.md  broadcaster.html  broadcaster.py  requirements.txt
ros_humble_docker/: Dockerfile  docker-compose.yml  docker_build.sh  exec.sh
ros_humble_docker/ros2_ws/install/amr/share/amr/: local_setup.sh  package.dsv  package.ps1  package.sh  package.xml
ros_humble_docker/ros2_ws/log/: latest_build
ros_humble_docker/ros2_ws/src/robot_simulator/: delete_source.sh  readme.md
ros_humble_docker/ros2_ws/src/robot_simulator/dependency_pkgs/MOBILE_ROBOT_BASIC/amr_core/: CMakeLists.txt  package.xml
ros_humble_docker/ros2_ws/src/robot_simulator/dependency_pkgs/MOBILE_ROBOT_BASIC/amr_core/include/amr_core/: amr_core.h  can.hpp  ekf_odometry.h  velocity_profile.h
ros_humble_docker/ros2_ws/src/robot_simulator/dependency_pkgs/MOBILE_ROBOT_BASIC/amr_core/include/teleop_keyboard/: teleop_keyboard.h
ros_humble_docker/ros2_ws/src/robot_simulator/dependency_pkgs/MOBILE_ROBOT_BASIC/amr_core/launch/: simulator_bringup.launch.py
ros_humble_docker/ros2_ws/src/robot_simulator/dependency_pkgs/MOBILE_ROBOT_BASIC/amr_core/param/: ammr_param.yaml  laser_base_exclude_filter.yaml  laser_filter.yaml  param.yaml  ydlidar.yaml
ros_humble_docker/ros2_ws/src/robot_simulator/dependency_pkgs/MOBILE_ROBOT_BASIC/amr_description/: CMakeLists.txt  package.xml
ros_humble_docker/ros2_ws/src/robot_simulator/dependency_pkgs/MOBILE_ROBOT_BASIC/amr_description/launch/: amr_description.launch.py
ros_humble_docker/ros2_ws/src/robot_simulator/dependency_pkgs/MOBILE_ROBOT_BASIC/amr_description/urdf/: ammr.sdf  ammr.urdf.xacro
ros_humble_docker/ros2_ws/src/robot_simulator/dependency_pkgs/MOBILE_ROBOT_BASIC/amr_interface/: CMakeLists.txt
ros_humble_docker/ros2_ws/src/robot_simulator/dependency_pkgs/MOBILE_ROBOT_BASIC/amr_interface/include/amr_interface/: enhanced_execution.hpp  execution.hpp  interface.hpp  map_manager.hpp  node_manager.hpp  parameter_updater.hpp  path_status_manager.hpp  simulation.h  state.hpp
ros_humble_docker/ros2_ws/src/robot_simulator/dependency_pkgs/MOBILE_ROBOT_BASIC/amr_interface/launch/: interface.launch.py
ros_humble_docker/ros2_ws/src/robot_simulator/dependency_pkgs/MOBILE_ROBOT_BASIC/amr_interface/param/: interface.yaml  update_param.yaml
ros_humble_docker/ros2_ws/src/robot_simulator/dependency_pkgs/MOBILE_ROBOT_BASIC/amr_navigation/: CMakeLists.txt  package.xml
ros_humble_docker/ros2_ws/src/robot_simulator/dependency_pkgs/MOBILE_ROBOT_BASIC/amr_navigation/include/amr_navigation/: periodic_costmap_clearer.hpp
ros_humble_docker/ros2_ws/src/robot_simulator/dependency_pkgs/MOBILE_ROBOT_BASIC/amr_navigation/launch/: bringup_launch.py  bringup_simulator_launch.py  localization_simulator_launch.py  navigation_launch.py  navigation_robot_simulator.launch.py
ros_humble_docker/ros2_ws/src/robot_simulator/dependency_pkgs/MOBILE_ROBOT_BASIC/amr_navigation/maps/: ammr_250312.pgm  ammr_250312.yaml  skku7th.yaml
ros_humble_docker/ros2_ws/src/robot_simulator/dependency_pkgs/MOBILE_ROBOT_BASIC/amr_navigation/params/: amr_navigation.yaml  redbot02_navigation copy.yaml  redbot02_navigation.yaml  redbot04_navigation_param.yaml  turtlebot4_navi.yaml
ros_humble_docker/ros2_ws/src/robot_simulator/dependency_pkgs/MOBILE_ROBOT_BASIC/amr_navigation/rviz/: navigation.rviz
ros_humble_docker/ros2_ws/src/robot_simulator/dependency_pkgs/MOBILE_ROBOT_BASIC/amr_odometry/: CMakeLists.txt  package.xml
ros_humble_docker/ros2_ws/src/robot_simulator/dependency_pkgs/MOBILE_ROBOT_BASIC/amr_odometry/include/amr_odometry/: odometry_publisher.h
ros_humble_docker/ros2_ws/src/robot_simulator/dependency_pkgs/MOBILE_ROBOT_BASIC/amr_odometry/launch/: odom.launch.py
ros_humble_docker/ros2_ws/src/robot_simulator/dependency_pkgs/MOBILE_ROBOT_BASIC/amr_odometry/param/: param.yaml
ros_humble_docker/ros2_ws/src/robot_simulator/dependency_pkgs/caselab_rviz2_plugin/: CMakeLists.txt  README.md  rviz_common_plugins.xml
ros_humble_docker/ros2_ws/src/robot_simulator/dependency_pkgs/caselab_rviz2_plugin/include/: ammrTask_panel.hpp  camswitch_panel.hpp  demo_panel.hpp
ros_humble_docker/ros2_ws/src/robot_simulator/dependency_pkgs/caselab_rviz2_plugin/launch/: test.launch.py
ros_humble_docker/ros2_ws/src/robot_simulator/dependency_pkgs/caselab_rviz2_plugin/rviz/: ammr.rviz
ros_humble_docker/ros2_ws/src/robot_simulator/dependency_pkgs/caselab_rviz2_plugin/src/: ammrTask_panel.cpp  camswitch_panel.cpp  demo_panel.cpp
ros_humble_docker/ros2_ws/src/robot_simulator/dependency_pkgs/caselab_rviz2_plugin/task/: ammrtask.yaml
(+1262 files in other folders)
