<?xml version="1.0"?>
<package format="3">
  <name>amr</name>
  <version>1.0.0</version>
  <description>
    ROS2 package for CASELab Robot (meta package)
  </description>
  <license>Apache 2.0</license>

  <maintainer email="ksw7384@g.skku.edu"> seungwonkwon</maintainer>
  <author email="ksw7384@g.skku.edu">seungwonkwon</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- redbot02 package list -->
  <!-- <exec_depend>casebot_core</exec_depend> -->
  <exec_depend>amr_core</exec_depend>
  <exec_depend>amr_odometry</exec_depend>
  <exec_depend>amr_description</exec_depend>
  <!-- <exec_depend>redbot02_slam</exec_depend> -->
  <exec_depend>amr_navigation</exec_depend>

  <!-- This is meta package -->
  <export><metapackage/></export>
</package>