<?xml version="1.0"?>
<package format="3">
  <!-- 패키지 이름 -->
  <name>amr_description</name>
  
  <!-- 패키지 버전 -->
  <version>0.1.0</version>
  
  <!-- 패키지 설명 -->
  <description>The amr_description package for ROS2</description>

  <!-- 패키지 유지 관리자의 이름과 이메일 -->
  <maintainer email="ksw7384@todo.todo">cjh</maintainer>

  <!-- 라이센스 -->
  <license>Apache-2.0</license>

  <!-- ROS2 빌드 도구 의존성 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 빌드, 실행 시 의존 패키지 설정 -->
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>xacro</depend>
  <depend>urdf</depend>
  <!-- 설치 관련 설정 -->
  <export>
    <!-- ROS2에서 명시하지 않은 태그명을 사용할 때 -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
